--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>tutorial</title>
     <meta charset="UTF-8">
+    <!--main css-->
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <div id="content"></div>
